// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<steps> demo: > render [arrow] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-arrow">
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <!--v-if-->
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <!--v-if-->
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Processing</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <!--v-if-->
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [basic] correctly 1`] = `
<div>
  <div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default">
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Succeeded</div>
        <!--v-if-->
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Processing</div>
        <!--v-if-->
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Pending</div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div role="separator" class="sd-divider sd-divider-horizontal">
    <!---->
  </div>
  <div class="sd:text-[#c9cdd4] sd:leading-35 sd:text-center"> Step 2 Content </div>
</div>
`;

exports[`<steps> demo: > render [changeable] correctly 1`] = `
<div>
  <div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default sd-steps-changeable">
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Succeeded</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Processing</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Pending</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
  </div>
  <div class="sd:w-full sd:h-50 sd:text-center sd:bg-(--color-bg-2) sd:text-[#c2c7cc]">
    <div class="sd:leading-40">Step1 Content</div>
    <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
      <!---->
      <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-disabled" type="button" disabled="">
          <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M32 8.4 16.444 23.956 32 39.513"></path>
          </svg> Back
        </button></div>
      <!---->
      <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
          <!--v-if--> Next <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="m16 39.513 15.556-15.557L16 8.4"></path>
          </svg>
        </button></div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [custom-node] correctly 1`] = `
<div>
  <div class="sd-steps sd-steps-horizontal sd-steps-label-vertical sd-steps-mode-default sd-steps-changeable">
    <div class="sd-steps-item sd-steps-item-finish">
      <div class="sd-steps-item-tail"></div>
      <div class="sd-steps-item-node"><span>0</span>
        <!---->
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title"> Succeeded </div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <div class="sd-steps-item-tail"></div>
      <div class="sd-steps-item-node"><span>0</span>
        <!---->
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title"> Processing Succeeded </div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <div class="sd-steps-item-tail"></div>
      <div class="sd-steps-item-node"><span>0</span>
        <!---->
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Pending </div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
  </div>
  <div class="sd:mt-5 sd:text-center">
    <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
      <!---->
      <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-disabled" type="button" disabled="">
          <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M32 8.4 16.444 23.956 32 39.513"></path>
          </svg> Back
        </button></div>
      <!---->
      <div class="sd-space-item"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
          <!--v-if--> Next <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="m16 39.513 15.556-15.557L16 8.4"></path>
          </svg>
        </button></div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [description] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default">
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Processing</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [dot] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-vertical sd-steps-mode-dot">
  <div class="sd-steps-item sd-steps-item-finish">
    <div class="sd-steps-item-tail"></div>
    <div class="sd-steps-item-node">
      <!--v-if-->
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <!--v-if-->
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <div class="sd-steps-item-tail"></div>
    <div class="sd-steps-item-node">
      <!--v-if-->
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Processing</div>
      <!--v-if-->
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <div class="sd-steps-item-tail"></div>
    <div class="sd-steps-item-node">
      <!--v-if-->
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [error] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default">
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Error</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [icon] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default">
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-home" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M7 17 24 7l17 10v24H7z"></path>
          <path d="M20 28h8v13h-8z"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title"> Succeeded </div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-loading" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title"> Processing </div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-thumb-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M7 17v26m35.17-21.394-5.948 18.697a1 1 0 0 1-.953.697H14V19h3l9.403-12.223a1 1 0 0 1 1.386-.196l2.535 1.87a6 6 0 0 1 2.044 6.974L31 19h9.265a2 2 0 0 1 1.906 2.606Z"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title"> Pending </div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [label-placement] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-vertical sd-steps-mode-default">
  <div class="sd-steps-item sd-steps-item-finish">
    <div class="sd-steps-item-tail"></div>
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <div class="sd-steps-item-tail"></div>
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Processing</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <div class="sd-steps-item-tail"></div>
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [line-less] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default sd-steps-line-less">
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Processing</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <div class="sd-steps-item-description">This is a description</div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [navigation] correctly 1`] = `
<div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-navigation">
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Succeeded</div>
      <!--v-if-->
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Processing</div>
      <!--v-if-->
    </div>
  </div>
  <div class="sd-steps-item sd-steps-item-finish">
    <!--v-if-->
    <div class="sd-steps-item-node">
      <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg></div>
    </div>
    <div class="sd-steps-item-content">
      <div class="sd-steps-item-title">Pending</div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [small] correctly 1`] = `
<div>
  <div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-default sd-steps-size-small">
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Succeeded</div>
        <!--v-if-->
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Processing</div>
        <!--v-if-->
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <div class="sd-steps-item-node">
        <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Pending</div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div role="separator" class="sd-divider sd-divider-horizontal">
    <!---->
  </div>
  <div class="sd:text-[#c9cdd4] sd:leading-35 sd:text-center"> Step 2 Content </div>
</div>
`;

exports[`<steps> demo: > render [small-arrow] correctly 1`] = `
<div>
  <div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-arrow sd-steps-size-small sd:mb-5">
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <!--v-if-->
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Succeeded</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <!--v-if-->
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Processing</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <!--v-if-->
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Pending</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
  </div>
  <div class="sd-steps sd-steps-horizontal sd-steps-label-horizontal sd-steps-mode-arrow sd-steps-size-small">
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <!--v-if-->
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Succeeded</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <!--v-if-->
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Processing</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
    <div class="sd-steps-item sd-steps-item-finish">
      <!--v-if-->
      <!--v-if-->
      <div class="sd-steps-item-content">
        <div class="sd-steps-item-title">Pending</div>
        <div class="sd-steps-item-description">This is a description</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<steps> demo: > render [vertical] correctly 1`] = `
<div data-v-0d7a68b2="" class="frame-bg">
  <div data-v-0d7a68b2="" class="frame-body">
    <div data-v-0d7a68b2="" class="frame-aside">
      <div data-v-0d7a68b2="" class="sd-steps sd-steps-vertical sd-steps-label-horizontal sd-steps-mode-default">
        <div data-v-0d7a68b2="" class="sd-steps-item sd-steps-item-finish">
          <div class="sd-steps-item-tail"></div>
          <div class="sd-steps-item-node">
            <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
              </svg></div>
          </div>
          <div class="sd-steps-item-content">
            <div class="sd-steps-item-title">Succeeded</div>
            <!--v-if-->
          </div>
        </div>
        <div data-v-0d7a68b2="" class="sd-steps-item sd-steps-item-finish">
          <div class="sd-steps-item-tail"></div>
          <div class="sd-steps-item-node">
            <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
              </svg></div>
          </div>
          <div class="sd-steps-item-content">
            <div class="sd-steps-item-title">Processing</div>
            <!--v-if-->
          </div>
        </div>
        <div data-v-0d7a68b2="" class="sd-steps-item sd-steps-item-finish">
          <div class="sd-steps-item-tail"></div>
          <div class="sd-steps-item-node">
            <div class="sd-steps-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
              </svg></div>
          </div>
          <div class="sd-steps-item-content">
            <div class="sd-steps-item-title">Pending</div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    <div data-v-0d7a68b2="" class="frame-main">
      <div data-v-0d7a68b2="" class="main-content">The content of this step.</div>
      <div data-v-0d7a68b2="" class="main-bottom"><button data-v-0d7a68b2="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-disabled" type="button" disabled="">
          <!--v-if--><svg data-v-0d7a68b2="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M32 8.4 16.444 23.956 32 39.513"></path>
          </svg> Back
        </button><button data-v-0d7a68b2="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
          <!--v-if--> Next <svg data-v-0d7a68b2="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="m16 39.513 15.556-15.557L16 8.4"></path>
          </svg>
        </button></div>
    </div>
  </div>
</div>
`;
